# Link2News

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  pyproject.toml  requirements.in  secrets.env.example  排版原則.md  系統運作說明.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: ci.yml  (+1 more)
collector/: README.md  deploy.sh  get_push_id.sh  schema.sql  worker.js  wrangler.example.toml
demo/: .dockerignore  Dockerfile  SPACE_README.md  __init__.py  app.py  content.py  providers.py  render.py  requirements.in  security.py  service.py
docs/: ADAPTERS.md  API.md  DEMO.md  SECURITY_AND_PRIVACY.md  TECHNICAL.md
launchd/: com.weekly.trigger.plist  install.sh  uninstall.sh
pipeline/: __init__.py  adapters.py  check_trigger.sh  cli.py  common.py  config.example.yaml  curate.py  doctor.py  fetch.py  generate.py  github_star.py  ingest.py  llm.py  main.py  newspaper.py  openvoice_worker.py  podcast.py  resolve.py  runner.py  terms.py
scripts/: bootstrap.sh  check_public_tree.sh  generate_podcast_demo.sh  generate_readme_preview.py  richmenu.html  setup_openvoice.sh  setup_richmenu.py  verify_newspaper_layout.py
templates/: newspaper.html
tests/: test_adapters.py  test_demo_content.py  test_demo_provider.py  test_demo_security.py  test_demo_service.py  test_mobile_publish.py  test_newspaper_layout.py  test_public_cli.py  worker_artifact_test.mjs  worker_status_test.mjs
(+3 files in other folders)
